# DIME

./: .gitignore  DIME_GRPO_Training.ipynb  Dockerfile  EXPERIMENT_LOG.md  README.md  blog.md  bp_inference.py  inference.py  logs_Qwen_Qwen3-8B.txt  logs_Qwen_Qwen3-VL-8B-Instruct.txt  logs_checkpoints_qwen3_grpo_unsloth_merged_16bit.txt  logs_gemini-2_5-pro.txt  logs_meta-llama_Llama-3_1-8B-Instruct.txt  metrics_Qwen_Qwen3-8B.csv  metrics_checkpoints_qwen3_grpo_unsloth_merged_16bit.csv  metrics_gemini-2_5-pro.csv  metrics_gpt-4o-mini.csv  nithish_data_parser.py  openenv.yaml  paper.md  paper.tex  pyproject.toml  requirements.txt  requirements_working.txt  run_llm_inferece.py  run_llm_inference.py  shivangi_train.py  test_llm_agent.py  test_smoke.py  train.py  train_grpo.py  train_grpo_unsloth.py  train_rl.py
agents/: __init__.py  base_agent.py  heuristic_agent.py  llm_agent.py  random_agent.py  threshold_agent.py  triage.py
benchmark/: __init__.py  benchmark_config.py  benchmark_registry.py  deterministic.py  dime_index.py  evaluation_harness.py  hidden_eval_registry.py  reward_telemetry.py  statistical_report.py  utils.py
distributed_infra_env/: README.md  __init__.py  client.py  inference.py  models.py  pyproject.toml
distributed_infra_env/server/: Dockerfile  __init__.py  app.py  environment.py  tasks.py
frontend/: package-lock.json  package.json
image_gen/: fig10_reward_deepdive.py  fig11_triage_tree.py  fig1_vanishing_gradient_fix.py  fig2_cascade_exploit_fix.py  fig3_cost_latency_coupling.py  fig4_curiosity_annealing.py  fig5_reward_cliff_bounded.py  fig6_training_convergence.py  fig7_benchmark_bars.py  fig8_failure_modes.py  fig9_architecture.py
server/: app.py  command_parser.py  environment.py  (+8 more)
(+41 files in other folders)
